[gd_scene load_steps=49 format=2]

[ext_resource path="res://assets/ui/tower_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/kenney_ui/PNG/grey_button07.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/kenney_ui/PNG/blue_button06.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/kenney_ui/PNG/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://assets/towers/shotgun/default/3_down.png" type="Texture" id=5]
[ext_resource path="res://assets/towers/shotgun/default/3_left.png" type="Texture" id=6]
[ext_resource path="res://assets/towers/shotgun/default/3_leftdown.png" type="Texture" id=7]
[ext_resource path="res://assets/towers/shotgun/default/3_leftup.png" type="Texture" id=8]
[ext_resource path="res://assets/towers/shotgun/default/3_right.png" type="Texture" id=9]
[ext_resource path="res://assets/towers/shotgun/default/3_rightdown.png" type="Texture" id=10]
[ext_resource path="res://assets/towers/shotgun/default/3_rightup.png" type="Texture" id=11]
[ext_resource path="res://assets/towers/shotgun/default/3_up.png" type="Texture" id=12]
[ext_resource path="res://assets/towers/shotgun/default/2_down.png" type="Texture" id=13]
[ext_resource path="res://assets/towers/shotgun/default/2_leftdown.png" type="Texture" id=14]
[ext_resource path="res://assets/towers/shotgun/default/2_left.png" type="Texture" id=15]
[ext_resource path="res://assets/towers/shotgun/default/2_leftup.png" type="Texture" id=16]
[ext_resource path="res://assets/towers/shotgun/default/2_up.png" type="Texture" id=17]
[ext_resource path="res://assets/towers/shotgun/default/2_rightup.png" type="Texture" id=18]
[ext_resource path="res://assets/towers/shotgun/default/2_right.png" type="Texture" id=19]
[ext_resource path="res://assets/towers/shotgun/default/2_rightdown.png" type="Texture" id=20]
[ext_resource path="res://assets/towers/shotgun/default/1_down.png" type="Texture" id=21]
[ext_resource path="res://assets/towers/shotgun/default/1_leftdown.png" type="Texture" id=22]
[ext_resource path="res://assets/towers/shotgun/default/1_left.png" type="Texture" id=23]
[ext_resource path="res://assets/towers/shotgun/default/1_leftup.png" type="Texture" id=24]
[ext_resource path="res://assets/towers/shotgun/default/1_up.png" type="Texture" id=25]
[ext_resource path="res://assets/towers/shotgun/default/1_rightup.png" type="Texture" id=26]
[ext_resource path="res://assets/towers/shotgun/default/1_right.png" type="Texture" id=27]
[ext_resource path="res://assets/towers/shotgun/default/1_rightdown.png" type="Texture" id=28]
[ext_resource path="res://assets/towers/mg/default/1_down.png" type="Texture" id=29]
[ext_resource path="res://assets/towers/mg/default/1_leftdown.png" type="Texture" id=30]
[ext_resource path="res://assets/towers/mg/default/1_left.png" type="Texture" id=31]
[ext_resource path="res://assets/towers/mg/default/1_leftup.png" type="Texture" id=32]
[ext_resource path="res://assets/towers/mg/default/1_up.png" type="Texture" id=33]
[ext_resource path="res://assets/towers/mg/default/1_rightup.png" type="Texture" id=34]
[ext_resource path="res://assets/towers/mg/default/1_right.png" type="Texture" id=35]
[ext_resource path="res://assets/towers/mg/default/1_rightdown.png" type="Texture" id=36]
[ext_resource path="res://assets/towers/laser/default/1_down.png" type="Texture" id=37]
[ext_resource path="res://assets/towers/laser/default/1_leftdown.png" type="Texture" id=38]
[ext_resource path="res://assets/towers/laser/default/1_left.png" type="Texture" id=39]
[ext_resource path="res://assets/towers/laser/default/1_leftup.png" type="Texture" id=40]
[ext_resource path="res://assets/towers/laser/default/1_up.png" type="Texture" id=41]
[ext_resource path="res://assets/towers/laser/default/1_rightup.png" type="Texture" id=42]
[ext_resource path="res://assets/towers/laser/default/1_right.png" type="Texture" id=43]
[ext_resource path="res://assets/towers/laser/default/1_rightdown.png" type="Texture" id=44]
[ext_resource path="res://assets/ui/kenney_ui/PNG/grey_boxCross.png" type="Texture" id=45]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "level3",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), null, null ],
"loop": true,
"name": "level2",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "level1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="tower_menu" type="Node2D"]

position = Vector2( -84, -88 )
script = ExtResource( 1 )

[node name="shotgun" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 6.0
margin_right = 57.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="animation" type="AnimatedSprite" parent="shotgun" index="0"]

position = Vector2( 23.8731, 22.4391 )
frames = SubResource( 1 )
animation = "level1"
frame = 3
playing = true

[node name="mg" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 75.0
margin_top = 6.0
margin_right = 124.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="animation" type="AnimatedSprite" parent="mg" index="0"]

position = Vector2( 23.8731, 22.4391 )
frames = SubResource( 2 )
animation = "default"
frame = 5
playing = true

[node name="laser" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 142.0
margin_top = 6.0
margin_right = 191.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="animation" type="AnimatedSprite" parent="laser" index="0"]

position = Vector2( 23.8731, 22.4391 )
frames = SubResource( 3 )
animation = "default"
frame = 6
playing = true

[node name="pistol" type="TextureButton" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = 6.0
margin_right = 259.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="animation" type="AnimatedSprite" parent="pistol" index="0"]

position = Vector2( 23.8731, 22.4391 )
frames = SubResource( 3 )
animation = "default"
frame = 6
playing = true

[node name="x" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_top = -57.0
margin_right = 248.0
margin_bottom = -17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 45 )
_sections_unfolded = [ "Textures" ]

[connection signal="pressed" from="shotgun" to="." method="_on_shotgun_pressed"]

[connection signal="pressed" from="mg" to="." method="_on_mg_pressed"]

[connection signal="pressed" from="laser" to="." method="_on_laser_pressed"]

[connection signal="pressed" from="x" to="." method="_on_x_pressed"]


